KAS-4529: reworked procedurestap view

--- a/app/components/subcases/subcase-detail-nav.hbs
+++ b/app/components/subcases/subcase-detail-nav.hbs
@@ -1,14 +1,16 @@
-<Auk::Tabs @reversed={{true}}>
-  <Auk::Tab
-    @isHierarchicalBack={{true}}
-  />
-  <Auk::Tab data-test-subcase-detail-nav-overview @route="cases.case.subcases.subcase.index">
-    {{t "overview"}}
-  </Auk::Tab>
-  <Auk::Tab data-test-subcase-detail-nav-documents @route="cases.case.subcases.subcase.documents">
-    {{t "documents"}}
-  </Auk::Tab>
-  <Auk::Tab data-test-subcase-detail-nav-decisions @route="cases.case.subcases.subcase.decision">
-    {{capitalize (t "decision")}}
-  </Auk::Tab>
-</Auk::Tabs>
+<div>
+  <div class="c-anchor-nav-holder">
+    <p>{{t "on-this-page"}}: </p>
+    <ul class="au-c-anchor-nav">
+      <li>
+        <a href="#case" class="js-anchor">{{t "overview"}}</a>
+      </li>
+      <li>
+        <a href="#documents" class="js-anchor">{{t "documents"}}</a>
+      </li>
+      <li>
+        <a href="#agenda" class="js-anchor">{{t "agenda-activities"}}</a>
+      </li> 
+    </ul>
+  </div>
+</div>
