--- a/app/components/subcase/subcase-description-panel/subcase-description-edit.hbs
+++ b/app/components/subcase/subcase-description-panel/subcase-description-edit.hbs
@@ -12,6 +12,34 @@
   </Auk::Panel::Header>
   <Auk::Panel::Body>
     <div class="au-c-form">
+      <AuFormRow>
+        <Auk::Label for="subcase-confidential">
+          {{t "limited-access"}}</Auk::Label>
+        <AuToggleSwitch
+          id="subcase-confidential"
+          @checked={{@subcase.confidential}}
+        />
+      </AuFormRow>
+      <AuFormRow>
+        <Auk::Label id="name-subcase">
+          {{t "name-subcase"}}</Auk::Label>
+        <Textarea
+          aria-labelledby="name-subcase"
+          rows="2"
+          class="auk-textarea"
+          @value={{@subcase.shortTitle}}
+        />
+      </AuFormRow>
+      <AuFormRow>
+        <Auk::Label id="title-subcase">
+          {{t "title-subcase"}}</Auk::Label>
+        <Textarea
+          aria-labelledby="name-subcase"
+          rows="4"
+          class="auk-textarea"
+          @value={{@subcase.title}}
+        />
+      </AuFormRow>
       <AuFieldset as |Fieldset|>
         <Fieldset.legend>{{t "subcase-type"}}</Fieldset.legend>
         <Fieldset.content>
