--- a/app/components/subcase/subcase-description-panel/subcase-description-view.hbs
+++ b/app/components/subcase/subcase-description-panel/subcase-description-view.hbs
@@ -5,7 +5,7 @@
         <Auk::Toolbar::Group @position="left">
           <Auk::Toolbar::Item>
             <h4 class="auk-panel__title">
-              {{t "subcase"}}
+              {{t "overview"}}
             </h4>
           </Auk::Toolbar::Item>
         </Auk::Toolbar::Group>
@@ -26,24 +26,49 @@
       </Auk::Toolbar>
     </Auk::Panel::Header>
     <Auk::Panel::Body>
-      <div class="auk-u-mb-4">
-        <p data-test-subcase-description-subcase-name class="auk-u-text-capitalize">
-          {{@subcase.subcaseName}}
-        </p>
-        <Subcase::Timeline @subcase={{@subcase}}/>
+      <div class="au-u-flex au-u-flex--spaced-small au-u-flex--space-between au-u-flex--vertical-center">
+        <AuHeading @level="4" @skin="4">{{t "design-decreet-of" subcaseShortTitle=(capitalize @subcase.shortTitle)}}</AuHeading>
+        <div class="au-u-flex au-u-flex--spaced-tiny au-u-flex--vertical-center">
+          {{#if (is-nota @subcase.agendaItemType)}}
+            <AuPill @size="small">{{t "note"}}</AuPill>
+          {{else}}
+            <AuPill @size="small">{{t "text"}}</AuPill>
+          {{/if}}
+          {{#if @allowEditing}}
+            {{#if @subcase.confidential}}
+              <AuPill @size="small" @skin="warning" @icon="lock-closed">{{t "limited-access"}}</AuPill>
+            {{/if}}
+          {{/if}}
+        </div>
       </div>
-      <div class="auk-o-grid">
-        <div class="auk-o-grid-col-4">
-          {{! TODO: modify test-selector strategy to be able to use <Auk::KeyValue> }}
-          <div class="auk-key-value-item">
-            <div class="auk-key-value-item__label">
-              {{t "number-session"}}
-            </div>
-            <div
-              data-test-subcase-description-meeting-number
-              class="auk-key-value-item__value"
-            >
-              {{#if this.loadAgendaData.isRunning}}
+      {{#if @subcase.title}}
+        <p>{{capitalize @subcase.title}}</p>
+      {{/if}}
+    </Auk::Panel::Body>
+    <Auk::Panel::Body>
+      <div class="au-o-grid au-o-grid--small au-u-1-1">
+        <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
+          <AuHeading @level="4" @skin="6">{{t "subcase"}}</AuHeading>
+          <p class="auk-u-mt-1">{{await @subcase.type.label}}</p>
+        </div>
+        <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
+          <AuHeading @level="4" @skin="6">{{t "is-on-agenda"}}</AuHeading>
+          {{#if this.loadAgendaData.isRunning}}
+            <Auk::Loader />
+          {{else if this.modelsOfMeetings}}
+            {{#each this.modelsOfMeetings as |models| }}
+              {{#let models.[0] as |meeting|}}
+                  {{date-phrase meeting.plannedStart}}{{if (has-next models this.modelsOfMeetings) ", "}}
+              {{/let}}
+            {{/each}}
+          {{else}}
+            {{t "not-yet-on-agenda"}}
+          {{/if}}
+        </div>
+        <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
+          <AuHeading @level="4" @skin="6">{{t "number-session"}}</AuHeading>
+          <p class="auk-u-mt-1">
+            {{#if this.loadAgendaData.isRunning}}
                   <Auk::Loader />
               {{else if this.modelsOfMeetings}}
                 {{#each this.modelsOfMeetings as |models|}}
@@ -54,118 +79,19 @@
               {{else}}
                 {{t "no-number-yet"}}
               {{/if}}
-            </div>
-          </div>
-          <div class="auk-key-value-item">
-            <div class="auk-key-value-item__label">
-              {{#if (and this.loadAgendaData.isIdle this.latestMeeting)}}
-                {{t "requested-for-session-kind" kind=(kind-print-label this.latestMeeting.kind)}}
-              {{else}}
-                {{t "requested-for-session"}}
-              {{/if}}
-            </div>
-            <div
-              data-test-subcase-description-meeting-planned-start
-              class="auk-key-value-item__value"
-            >
-              {{#if this.latestMeeting.plannedStart}}
-                {{t "requested-for-agenda"}}
-                {{date-phrase this.latestMeeting.plannedStart}}
-              {{else}}
-                <p>{{t "not-yet-requested"}}</p>
-              {{/if}}
-            </div>
-          </div>
+            </p>
         </div>
-        <div class="auk-o-grid-col-4">
-          <div class="auk-key-value-item">
-            <div class="auk-key-value-item__label">
-              {{t "is-on-agenda"}}
-            </div>
-            <div class="auk-key-value-item__value">
-              {{#if this.loadAgendaData.isRunning}}
-                <Auk::Loader />
-              {{else if this.modelsOfMeetings}}
-                {{#each this.modelsOfMeetings as |models| }}
-                  {{#let models.[0] models.[1] models.[2] as |meeting agenda agendaitem|}}
-                    <AuLink
-                      data-test-subcase-description-agenda-link
-                      @route="agenda.agendaitems.agendaitem"
-                      @models={{array
-                        meeting.id
-                        agenda.id
-                        agendaitem.id
-                      }}
-                    >
-                      {{! prettier-ignore}}
-                      {{date-phrase meeting.plannedStart}}{{if (has-next models this.modelsOfMeetings) ", "}}
-                    </AuLink>
-                  {{/let}}
-                {{/each}}
-              {{else}}
-                {{t "not-yet-on-agenda"}}
-              {{/if}}
-            </div>
-          </div>
-          <div class="auk-key-value-item">
-            <div class="auk-key-value-item__label">
-              {{t "date-last-edited"}}
-            </div>
-            <div
-              data-test-subcase-description-modified
-              class="auk-key-value-item__value"
-            >
-              {{date-phrase @subcase.modified}}
-            </div>
-          </div>
-        </div>
-        <div class="auk-o-grid-col-4">
-          <div class="auk-key-value-item">
-            <div class="auk-key-value-item__label">
-              {{t "decided-on"}}
-            </div>
-            <div
-              data-test-subcase-description-decided-on
-              class="auk-key-value-item__value"
-            >
-              {{#if this.loadAgendaData.isRunning}}
-                <div class="auk-skeleton auk-skeleton--rectangle" role="alert" aria-busy="true"></div>
-              {{else if this.canShowDecisionStatus}}
-                {{#if (or this.latestDecisionActivity.isApproved this.latestDecisionActivity.isAcknowledged)}}
-                  {{date this.latestMeeting.plannedStart}}
-                {{else if this.latestDecisionActivity.isPostponed}}
-                  {{t "postponed"}}
-                {{else if this.latestDecisionActivity.isRetracted}}
-                  {{t "retracted"}}
-                {{/if}}
-              {{else}}
-                {{t "not-yet-decided"}}
-              {{/if}}
-            </div>
-          </div>
-          <div class="auk-key-value-item">
-            <div class="auk-key-value-item__label">
-              {{t "requested-by"}}
-            </div>
-            <div
-              data-test-subcase-description-requested-by
-              class="auk-key-value-item__value"
-            >
-              {{#if
-                (or
-                  (is-pending @subcase.requestedBy)
-                  (is-pending @subcase.requestedBy.person)
-                  this.loadAgendaData.isRunning
-                )
-              }}
-                <div class="auk-skeleton auk-skeleton--rectangle" role="alert" aria-busy="true"></div>
-              {{else if @subcase.requestedBy}}
-                {{@subcase.requestedBy.person.fullName}}
-              {{else if this.showNotYetRequestedMessage}}
-                {{t "not-yet-requested"}}
-              {{/if}}
-            </div>
-          </div>
+        <div class="au-o-grid__item au-u-1-2 au-u-1-4@medium">
+          <AuHeading @level="4" @skin="6">Status</AuHeading>
+          {{#if this.loadAgendaData.isRunning}}
+            <Auk::Loader />
+          {{else if this.canShowDecisionStatus}}
+            <Decision::DecisionResultPill
+              @decisionResultCode={{this.latestDecisionActivity.decisionResultCode}}
+            />
+          {{else}}
+            {{t "not-yet-decided"}}
+          {{/if}}
         </div>
       </div>
     </Auk::Panel::Body>
