--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -48,6 +48,7 @@
 @import 'custom-application/pdf-viewer';
 @import 'custom-application/uploaded-document';
 @import 'custom-application/government-area';
+@import 'custom-application/cases';
 
 // AUK COMPONENTS
 @import 'auk-components'; // sourced from "au-kaleidos-css" npm package
