KAS-4525 Override hierarchical back tab styling

--- a/app/styles/auk/_auk-additions.scss
+++ b/app/styles/auk/_auk-additions.scss
@@ -402,3 +402,10 @@ table tr.lt-expanded-row {
   border-radius: 0;
   margin-bottom: 0;
 }
+
+// Hierarchical back tab
+// Override the visibility of the back button label within Kaleidos only
+
+.auk-tabs__hierarchical-back .auk-tabs__tab__label {
+  display: block;
+}
