--- a/app/templates/cases/case/subcases/subcase.hbs
+++ b/app/templates/cases/case/subcases/subcase.hbs
@@ -5,11 +5,13 @@
 {{else}}
   {{page-title (capitalize this.model.subcaseName)}}
 {{/if}}
-<div class="auk-u-bg-alt">
-  <Subcases::SubcaseHeader
-    @subcase={{this.model}}
-    @onMoveSubcase={{this.refreshSubcases}}
-    @onProposedForAgenda={{this.refreshSubcases}}
-  />
+<div class="auk-scroll-wrapper">
+  <div class="auk-u-bg-alt">
+    <Subcases::SubcaseHeader
+      @subcase={{this.model}}
+      @onMoveSubcase={{this.refreshSubcases}}
+      @onProposedForAgenda={{this.refreshSubcases}}
+    />
+  </div>
+  {{outlet}}
 </div>
-{{outlet}}
