--- a/app/templates/cases/case/subcases.hbs
+++ b/app/templates/cases/case/subcases.hbs
@@ -8,7 +8,7 @@
     <div class="auk-panel-layout__sidebar auk-panel-layout__sidebar--cases">
       <Subcases::SideNav @subcases={{@model}} />
     </div>
-    <div class="auk-panel-layout__main-content">
+    <div class="auk-panel-layout__main-content au-u-flex au-u-flex-column">
       {{outlet}}
     </div>
   </div>
