KAS-4529 Fix flex/scroll lay-outs

--- a/app/templates/cases/case/subcases.hbs
+++ b/app/templates/cases/case/subcases.hbs
@@ -6,10 +6,10 @@
 <div class="auk-panel-layout">
   <div class="auk-panel-layout__sidebar auk-panel-layout__sidebar--cases">
     <Subcases::SideNav
-      @subcases={{this.model}}> 
+      @subcases={{this.model}}>
     </Subcases::SideNav>
   </div>
-  <div class="auk-panel-layout__main-content">
+  <div class="auk-panel-layout__main-content au-u-flex au-u-flex--column">
     {{outlet}}
   </div>
 </div>
