--- a/app/components/subcases/subcase-header.hbs
+++ b/app/components/subcases/subcase-header.hbs
@@ -2,7 +2,7 @@
   <Auk::Toolbar>
     <Auk::Toolbar::Group @position="left">
       <Auk::Toolbar::Item>
-        <div class="auk-o-flex auk-o-flex--vertical auk-u-mt-2">
+        <div class="auk-o-flex auk-o-flex--vertical">
           <div class="auk-o-flex auk-o-flex--vertical-center">
             <Subcases::SubcaseDetailNav/>
           </div>
