change incorrect wording

--- a/app/components/agenda/agenda-header.hbs
+++ b/app/components/agenda/agenda-header.hbs
@@ -8,7 +8,7 @@
               class="auk-toolbar-complex__title"
               data-test-agenda-header-title
             >
-              {{t "agenda-of"}}
+              {{t "session-of"}}
               {{#if @meeting.isPreKaleidos}}
                 {{date-phrase @meeting.plannedStart}}
               {{else}}
