--- a/app/components/mandatees/mandatees-panel/mandatees-panel-view-compact.hbs
+++ b/app/components/mandatees/mandatees-panel/mandatees-panel-view-compact.hbs
@@ -14,6 +14,7 @@
           <AuPill @size="small" @icon="check" @skin="success">Indiener</AuPill>
         {{else}}
         {{/if}}
+        <Auk::New @title="Nieuwe minister" class="auk-u-mx-2"/>
       </span>
     {{/each}}
   </p>
