KAS-4496 add cypress changes to reflect moved functionality

--- a/app/components/agenda/agenda-overview.hbs
+++ b/app/components/agenda/agenda-overview.hbs
@@ -3,8 +3,7 @@
     <ChangesAlert
       @message={{t "editing-agenda-overview"}}
       @buttonText={{t "apply-order"}}
-      @onClear={{this.save}}
-      @cancellable="true"
+      @onConfirm={{this.save}}
       @onCancel={{this.onCancel}}
     />
   {{/if}}
