--- a/app/templates/agendas.hbs
+++ b/app/templates/agendas.hbs
@@ -54,7 +54,7 @@
   <ChangesAlert
     @message={{t "filtered-agendas"}}
     @buttonText={{t "clear-filter"}}
-    @onClear={{this.clearFilter}}
+    @onConfirm={{this.clearFilter}}
   />
 {{/if}}
 <div class="auk-scroll-wrapper">
