PR comments, change translation strings, make decisionResultCode optional, simplify if else trees

--- a/app/templates/cases/case/subcases/subcase/documents.hbs
+++ b/app/templates/cases/case/subcases/subcase/documents.hbs
@@ -35,22 +35,24 @@
     </Auk::Toolbar>
 
     {{#if this.documentsAreVisible}}
-      {{#if (and (user-may "view-documents-postponed-and-retracted") this.decisionActivity.isPostponed)}}
-        <AuAlert
-          @skin="warning"
-          @icon="alert-triangle"
-          @title={{t "postponed-item"}}
-        >
-          {{t "agendaitem-document-postponed-or-retracted--message" status=(lowercase (t "postponed"))}}
-        </AuAlert>
-      {{else if (and (user-may "view-documents-postponed-and-retracted") this.decisionActivity.isRetracted)}}
-        <AuAlert
-          @skin="warning"
-          @icon="alert-triangle"
-          @title={{t "retracted-item"}}
-        >
-          {{t "agendaitem-document-postponed-or-retracted--message" status=(lowercase (t "retracted"))}}
-        </AuAlert>
+      {{#if (user-may "view-documents-postponed-and-retracted")}}
+        {{#if this.decisionActivity.isPostponed}}
+          <AuAlert
+            @skin="warning"
+            @icon="alert-triangle"
+            @title={{t "postponed-item"}}
+          >
+            {{t "agendaitem-document-postponed--message"}}
+          </AuAlert>
+        {{else if this.decisionActivity.isRetracted}}
+          <AuAlert
+            @skin="warning"
+            @icon="alert-triangle"
+            @title={{t "retracted-item"}}
+          >
+            {{t "agendaitem-document-retracted--message"}}
+          </AuAlert>
+        {{/if}}
       {{/if}}
       <Documents::DocumentCardList
         @pieces={{this.model.pieces}}
@@ -64,10 +66,14 @@
           @skin="info"
           @icon="info-circle"
         >
-          {{#if (and (not (user-may "view-documents-postponed-and-retracted")) this.decisionActivity.isPostponed)}}
-            {{t "agendaitem-is-status-no-documents-available" status=(lowercase (t "postponed"))}}
-          {{else if (and (not (user-may "view-documents-postponed-and-retracted")) this.decisionActivity.isRetracted)}}
-            {{t "agendaitem-is-status-no-documents-available" status=(lowercase (t "retracted"))}}
+          {{#if (not (user-may "view-documents-postponed-and-retracted"))}}
+            {{#if this.decisionActivity.isPostponed}}
+              {{t "agendaitem-postponed-no-documents-available"}}
+            {{else if this.decisionActivity.isRetracted}}
+              {{t "agendaitem-retracted-no-documents-available"}}
+            {{else}}
+              {{t "no-documents-yet"}}
+            {{/if}}
           {{else}}
             {{t "no-documents-yet"}}
           {{/if}}
