--- a/app/styles/prototype/_agenda.scss
+++ b/app/styles/prototype/_agenda.scss
@@ -33,3 +33,12 @@
     overflow: auto;
   }
 }
+
+.auk-table td.auk-table-drag-col {
+  width: 2rem;
+  padding: 1.75rem 1rem 1.2rem;
+}
+
+.auk-table--sortable {
+  position: relative;
+}
