--- a/app/components/agenda/agenda-header.hbs
+++ b/app/components/agenda/agenda-header.hbs
@@ -44,6 +44,8 @@
           <Agenda::AgendaHeader::AgendaVersionActions
             @meeting={{@meeting}}
             @currentAgenda={{@currentAgenda}}
+            @model={{@model}}
+            @notaGroups={{@notaGroups}}
             @reverseSortedAgendas={{@reverseSortedAgendas}}
             @didCloseMeeting={{@refreshRoute}}
             @onStartLoading={{this.setLoadingMessage}}
