--- a/app/templates/agenda.hbs
+++ b/app/templates/agenda.hbs
@@ -8,6 +8,8 @@
 <Agenda::AgendaHeader
   @meeting={{this.model.meeting}}
   @currentAgenda={{this.model.agenda}}
+  @model={{this.model}}
+  @notaGroups={{this.notaGroups}}
   @reverseSortedAgendas={{this.model.reverseSortedAgendas}}
   @onStartLoading={{this.enableIsLoading}}
   @onStopLoading={{this.disableIsLoading}}
