--- a/app/templates/cases/index.hbs
+++ b/app/templates/cases/index.hbs
@@ -102,7 +102,7 @@
                       </td>
                       <td>
                         {{#if row.case.isArchived}}
-                        <AuPill @size="small">Eerste principiële goedkeuring</AuPill>
+                        <AuPill @size="small">Principiële goedkeuring</AuPill>
                         {{else}}
                         <AuPill @size="small" @skin="ongoing">Bekrachtiging</AuPill>
                         {{/if}}
@@ -176,9 +176,9 @@
                       </td>
                       <td>
                         {{#if row.case.isArchived}}
-                        <AuPill @size="small">Tweede principiële goedkeuring</AuPill>
+                        <AuPill @size="small">Principiële goedkeuring</AuPill>
                         {{else}}
-                        <AuPill @size="small" @skin="ongoing">Eerste principiële goedkeuring</AuPill>
+                        <AuPill @size="small" @skin="ongoing">Principiële goedkeuring</AuPill>
                         {{/if}}
                       </td>
                       <td class="auk-u-text-align--right">
