--- a/app/templates/email-template.hbs
+++ b/app/templates/email-template.hbs
@@ -62,7 +62,7 @@
                   De volgende zaken werden doorgestuurd:
                 </p>
                 <ul style="list-style-type: disc; list-style-position: outside; margin-bottom: 15px; margin-left: 15px">
-                  <li style="margin-bottom: 10px;">Eerste principiële goedkeuring:
+                  <li style="margin-bottom: 10px;">Principiële goedkeuring:
                     <ul style="list-style-type: circle; list-style-position: outside; margin-left: 20px;">
                       <li><a href="#!" target="blank" style="color:#0055CC;">VR 2022 2212 DOC.0357-3BIS Parkendecreet -Beslissingsfiche.pdf (getekend)</a></li>
                       <li><a href="#!" target="blank" style="color:#0055CC;">VR 2022 2212 DOC.0357-3BIS Parkendecreet -Ontwerpdecreet.docx</a></li>
